elk/elasticsearch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      stack: elk
  template:
    metadata:
      labels:
        app: elasticsearch
        stack: elk
    spec:
      volumes:
      - name: elasticsearch
        persistentVolumeClaim:
          claimName: elasticsearch
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.1
        ports:
        - containerPort: 9200
        - containerPort: 9300
        volumeMounts:
        - name: elasticsearch
          mountPath: /usr/share/elasticsearch/data
        command:
        - /bin/sh
        - -c
        - |
          sysctl -w vm.max_map_count=262144
          /usr/local/bin/docker-entrypoint.sh
        securityContext:
          privileged: true
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - protocol: TCP
    name: http-rest
    port: 9200
    targetPort: 9200
  - protocol: TCP
    name: node-comms
    port: 9300
    targetPort: 9300
