elk/kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-web-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - kibana.high.am
    secretName: kibana-tls
  rules:
  - host: kibana.high.am
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-http
          servicePort: 5601
